pkg/tests/testthat/errors/mdl/include3.mdl
ident a = 1; 

#include incl/incl_err.mdl

a === 1 b = 2

#include incl/incl_err.mdl
